resolve overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -153,6 +153,7 @@ tr{
 
   .darwinAbout img{
     width: 400px;
+    margin-bottom: 0;
   }
 
   .darwinAboutDATA{
@@ -165,7 +166,7 @@ tr{
     line-height: 20px;
   }
 
-  .BoxOut .boxHead{
+  .boxHead{
      width: 500px;
   }
 
@@ -258,13 +259,18 @@ tr{
 
 @media (max-width:425px) {
 
-  .Port div{
+  .PortInside{
+    margin-right: 25px ;
+    margin-left: 25px ;
+  }
+
+  .boxPort {
     width: 240px;
   }
 
 
 .UpHero{
-  margin-top: 0px;
+  margin-top: 30px;
 }
 
 
@@ -281,13 +287,9 @@ tr{
   width: 260px;
 }
 
-.BoxOut .boxHead{
-  width: 200px;
-}
-
 .boxHead {
   padding: 10px ;
-  width: 200px;
+  width: 240px;
 }
 
 .boxHead h1 {
@@ -301,7 +303,7 @@ tr{
 }
 
 .boxIn {   
- width: 200px;
+ width: 240px;
  height: 80px;
  border: 1px solid #000000;
 }
